Compiler/tests/bad/Functions/07_function.rs
// while context

fn add(x : i32, y : i32) -> bool
{
    return x + y;
}

fn main(){
  add(5, 99);
}